--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="btns">
       <div id="btn_start"></div>
-      <div id="btn_snap">拍照</div>
+      <div id="btn_snap">拍照吧</div>
     </div>
   </div>
   <div id="img_place">
