--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>我的宝儿</title>
+  <title>超级无敌巨可爱的小潘潘🥰</title>
 </head>
 
 <body>
-  <h1>还有十分钟就饭点了</h1>
+  <h1 id="h1">快去热饭</h1>
 </body>
+
+<script>
+  let texts = ['我的宝儿', '想你', '爱你', '心疼你', '在吃饭了吗', '快去热饭', '吃饱饱']
+  let index = Math.floor(Math.random() * texts.length)
+  h1.innerHTML = texts[index]
+</script>
 
 </html>
